--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "author": "igorlogius",
-  "homepage_url": "https://github.com/igorlogius",
+  "homepage_url": "https://github.com/igorlogius/auto-close-duplicate-tabs",
   "background": {
     "scripts": ["background.js"]
   },
@@ -20,5 +20,5 @@
     "page": "options.html"
   },
   "permissions": ["cookies", "storage", "tabs"],
-  "version": "1.9.24"
+  "version": "1.9.25"
 }
